syntax = "proto3";

import "google/protobuf/struct.proto";

option go_package = "./generated";

// Source Event that is Acquired by API services.
message AcquisitionEventPayload {
  map<string,google.protobuf.Value> data = 2 ;
  map<string,google.protobuf.Value> debug = 3;
  string session_id = 5;
  string guest_id = 6 ;
  uint64 event_ts_nanos = 7 ;
  string event_key = 8 ;
  // Three Primary Keys for an event.
  // No two events can have the same schema.
  string event_name = 9 ;
  string event_type = 10 ;
  string channel = 11 ;
  string  user_id= 12 ;
}

// Event that is sent by the clients.
message AcquisitionEvent {
  repeated AcquisitionEventPayload payload = 2 ;
  map<string,google.protobuf.Value> client_params = 3 ;
  string client_id = 4 ;
  // Read only field.
  string batch_id = 5;
}

// Response sent to the service clients on  ce an event is acquired.
message AcquisitionEventResponse {
  int32 status = 1;
  float processing_time = 2;
  string batch_id = 3;
}